--- a/assets/css/v2019.css
+++ b/assets/css/v2019.css
@@ -2546,7 +2546,7 @@ footer#colophon a {
   color: #fff;
 }
 #bobi {
-  /* background-image: url(https://oithost.utk.edu/logos/utk-logo.png); */
+  /* background-image: url(https://oithost.oh-scipe.github.io/logos/utk-logo.png); */
   background-repeat: no-repeat;
   background-position: 0;
   background-size: 229px 56px;
