build system init

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -171,35 +171,35 @@
                       <ul id="menu-main" class="menu">
                         <li
                           id="menu-item-4405"
-                          class="menu-item menu-item-type-custom menu-item-object-custom  menu-item-home menu-item-4405"
+                          class="menu-item menu-item-type-custom menu-item-object-custom {{ class_home }} menu-item-home menu-item-4405"
                         >
                           <a href="./index.htm" aria-current="page">Home</a>
                         </li>
 
                         <li
                           id="menu-item-4766"
-                          class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item menu-item-4766"
+                          class="menu-item menu-item-type-post_type menu-item-object-page {{ class_about }} menu-item-4766"
                         >
                           <a href="./about.htm">About</a>
                         </li>
 
                         <li
                           id="menu-item-4775"
-                          class="menu-item menu-item-type-post_type menu-item-object-page  menu-item-4775"
+                          class="menu-item menu-item-type-post_type menu-item-object-page {{ class_projects }} menu-item-4775"
                         >
                           <a href="./projects.htm">Projects</a>
                         </li>
 
                         <li
                           id="menu-item-4772"
-                          class="menu-item menu-item-type-post_type menu-item-object-page  menu-item-4772"
+                          class="menu-item menu-item-type-post_type menu-item-object-page {{ class_people }} menu-item-4772"
                         >
                           <a href="./people.htm">People</a>
                         </li>
 
                         <li
                           id="menu-item-4776"
-                          class="menu-item menu-item-type-post_type menu-item-object-page  menu-item-4772"
+                          class="menu-item menu-item-type-post_type menu-item-object-page {{ class_initiatives }} menu-item-4772"
                         >
                           <a href="./Initiatives.htm">Initiatives</a>
                         </li>
@@ -213,51 +213,7 @@
           </div>
 
           <main id="content" class="content-area">
-                        <article
-              id="post-4363"
-              class="post-4363 page type-page status-publish hentry"
-            >
-              <!-- <header class="entry-header">
-                <h1 class="entry-title">Management and Coordination Plan</h1>
-              </header> -->
-
-               <header class="entry-header">
-                <h1 class="entry-title">About US</h1>
-              </header> 
-
-              <div class="entry-content reg">
-                <!-- <h3>About Us</h3> -->
-                <p>
-                  The project team is inherently interdisciplinary, cutting
-                  across CI, HPC, AI/ML, Datascience, Materials Data Science,
-                  Healthcare and Biomedical Imaging, and Engineering. The PIs
-                  represent a unique synergistic team with expertise in the
-                  requisite areas to successfully deliver this project. The team
-                  is diverse, and two of the three site PIs are women (Karen
-                  Tomko and Jane Combs).
-                </p>
-                <!-- <h3>Mission</h3>
-                <blockquote>
-                  <h3 class="my-4">Team Expertise:</h3>
-                </blockquote>
-                <p>
-                  PI Chaudhary has extensive academic, industry, and NSF program
-                  director (CISE/OAC) experience in CI, HPC and AI/ML. He is
-                  co-PI of the NSF AI Institute, ICICLE; PI of subaward for the
-                  ACCESS Monitoring and Measuring Services (MMS) project;
-                  recently awarded NSF MRI for Acquisition of Artificial
-                  Intelligence SuperComputer (AISC); and co-PI of NNSA Materials
-                  Data Science for Stockpile Stewardship (MDS3). He was the CEO
-                  of Tata CRL, world’s largest HPC cloud & services company that
-                  built the 4th largest supercomputer (largest private) in the
-                  world.
-                </p>
-              </div> -->
-              <!-- .entry-content -->
-
-              <footer class="entry-meta"></footer>
-              <!-- .entry-meta -->
-            </article>
+            <!-- CONTENT -->
           </main>
 
           <div id="tertiary" class="sidebar-container" role="complementary">
