--- a/templates/person_block.html
+++ b/templates/person_block.html
@@ -4,11 +4,10 @@
                       <img
                         loading="lazy"
                         decoding="async"
-                        width="250"
-                        height="350"
                         src="assets/images/profile/{image}" 
                         alt="{name}" 
                         class="wp-image-XXXX size-full"
+                        style="width: 250px; height: 350px; object-fit: cover; object-position: top; border-radius: 4px;"
                       />
                     </figure>
                     <div class="wp-block-media-text__content">
@@ -17,13 +16,9 @@
                       <ul class="wp-block-social-links is-layout-flex wp-block-social-links-is-layout-flex" style="display: flex; flex-direction: row; gap: 10px; list-style: none; padding: 0; margin: 0 0 1em 0;">
                         <li class="wp-social-link wp-block-social-link">
                             <a href="https://orcid.org/{orcid}" class="wp-block-social-link-anchor">
-                              <img
-                                decoding="async"
-                                src="assets/images/icons/orcid_32x32.webp"
-                                alt="ORCID logo"
-                                width="24"
-                                height="24"
-                              />
+                              <svg width="24" height="24" viewBox="0 0 24 24" version="1.1" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false">
+                                <path d="M12 0C5.372 0 0 5.372 0 12s5.372 12 12 12 12-5.372 12-12S18.628 0 12 0zM7.369 4.378c.525 0 .947.431.947.947s-.422.947-.947.947a.95.95 0 0 1-.947-.947c0-.525.422-.947.947-.947zm-.722 3.038h1.444v10.041H6.647V7.416zm3.562 0h3.9c3.712 0 5.344 2.653 5.344 5.025 0 2.578-2.016 5.025-5.325 5.025h-3.919V7.416zm1.444 1.306v7.419h2.438c1.938 0 2.969-1.031 2.969-2.969 0-2.094-1.156-4.45-3.081-4.45h-2.325z"></path>
+                              </svg>
                               <span class="wp-block-social-link-label screen-reader-text">ORCID</span>
                             </a>
                         </li>
@@ -44,7 +39,7 @@
                             <span class="wp-block-social-link-label screen-reader-text">Mail</span>
                           </a>
                         </li>
-                        <li class="wp-social-link wp-social-link-linkedin wp-block-social-link">
+                        <li class="wp-social-link wp-social-link-linkedin wp-block-social-link" style="background-color: #f0f0f0 !important; color: #444 !important;">
                           <a href="{linkedin}" class="wp-block-social-link-anchor">
                             <svg
                               width="24"
