--- a/templates/person_block.html
+++ b/templates/person_block.html
@@ -1,4 +1,4 @@
-                <div>
+                <div style="margin-bottom: 60px;">
                   <div class="wp-block-media-text alignwide is-stacked-on-mobile is-vertically-aligned-top" style="grid-template-columns: 40% auto">
                     <figure class="wp-block-media-text__media">
                       <img
