--- a/templates/layout.html
+++ b/templates/layout.html
@@ -10,7 +10,7 @@
 
     <link
       rel="shortcut icon"
-      href="assets/images/logo/NSF_Official_logo_Low_Res_150ppi-300x300.png"
+      href="{{ relative_root }}/assets/images/logo/NSF_Official_logo_Low_Res_150ppi-300x300.png"
     />
 
     <link rel="dns-prefetch" href="https://code.jquery.com/" />
@@ -32,7 +32,7 @@
     <link
       rel="stylesheet"
       id="wp-block-library-css"
-      href="./assets/css/style.min.css"
+      href="{{ relative_root }}/assets/css/style.min.css"
       type="text/css"
       media="all"
     />
@@ -57,7 +57,7 @@
     <link
       rel="stylesheet"
       id="custom-style-css"
-      href="./assets/css/v2019.css"
+      href="{{ relative_root }}/assets/css/v2019.css"
       type="text/css"
       media="all"
     />
@@ -87,7 +87,7 @@
       href="https://oh-scipe.github.io/wp-json/oembed/1.0/embed?url=https%3A%2F%2Fciren.oh-scipe.github.io%2F&amp;format=xml"
     />
     <script
-      src="assets/js/wp-emoji-release.min.js"
+      src="{{ relative_root }}/assets/js/wp-emoji-release.min.js"
       defer="defer"
     ></script>
   </head>
@@ -173,35 +173,35 @@
                           id="menu-item-4405"
                           class="menu-item menu-item-type-custom menu-item-object-custom {{ class_home }} menu-item-home menu-item-4405"
                         >
-                          <a href="./index.htm" aria-current="page">Home</a>
+                          <a href="{{ relative_root }}/index.htm" aria-current="page">Home</a>
                         </li>
 
                         <li
                           id="menu-item-4766"
                           class="menu-item menu-item-type-post_type menu-item-object-page {{ class_about }} menu-item-4766"
                         >
-                          <a href="./about.htm">About</a>
+                          <a href="{{ relative_root }}/about.htm">About</a>
                         </li>
 
                         <li
                           id="menu-item-4775"
                           class="menu-item menu-item-type-post_type menu-item-object-page {{ class_projects }} menu-item-4775"
                         >
-                          <a href="./projects.htm">Projects</a>
+                          <a href="{{ relative_root }}/projects.htm">Projects</a>
                         </li>
 
                         <li
                           id="menu-item-4772"
                           class="menu-item menu-item-type-post_type menu-item-object-page {{ class_people }} menu-item-4772"
                         >
-                          <a href="./people.htm">People</a>
+                          <a href="{{ relative_root }}/people.htm">People</a>
                         </li>
 
                         <li
                           id="menu-item-4776"
                           class="menu-item menu-item-type-post_type menu-item-object-page {{ class_initiatives }} menu-item-4772"
                         >
-                          <a href="./Initiatives.htm">Initiatives</a>
+                          <a href="{{ relative_root }}/Initiatives.htm">Initiatives</a>
                         </li>
                       </ul>
                     </div>
@@ -227,7 +227,7 @@
                     <img
                       loading="lazy"
                       decoding="async"
-                      src="assets/images/logo/NSF_Official_logo_Low_Res_150ppi-300x300.png"
+                      src="{{ relative_root }}/assets/images/logo/NSF_Official_logo_Low_Res_150ppi-300x300.png"
                       alt=""
                       class="wp-image-4578"
                       width="287"
@@ -254,7 +254,7 @@
                   <li>
                     <a
                       class="wp-block-latest-posts__post-title"
-                      href="./Initiatives.htm"
+                      href="{{ relative_root }}/Initiatives.htm"
                       > Summer 2024 Internship Program </a
                     >
                     <time
@@ -332,7 +332,7 @@
               <img
                 loading="lazy"
                 decoding="async"
-                src="./assets/images/logo/NSF_Official_logo_Low_Res_150ppi-300x300.png"
+                src="{{ relative_root }}/assets/images/logo/NSF_Official_logo_Low_Res_150ppi-300x300.png"
                 alt=""
                 class="wp-image-4390"
                 width="120"
@@ -343,7 +343,7 @@
               <img
                 loading="lazy"
                 decoding="async"
-                src="./assets/images/logo/osu_logo.png"
+                src="{{ relative_root }}/assets/images/logo/osu_logo.png"
                 alt=""
                 class="wp-image-4390"
                 width="120"
@@ -354,7 +354,7 @@
               <img
                 loading="lazy"
                 decoding="async"
-                src="./assets/images/logo/cwru_logo.png"
+                src="{{ relative_root }}/assets/images/logo/cwru_logo.png"
                 alt=""
                 class="wp-image-4390"
                 width="120"
@@ -365,7 +365,7 @@
               <img
                 loading="lazy"
                 decoding="async"
-                src="./assets/images/logo/uoc_logo.png"
+                src="{{ relative_root }}/assets/images/logo/uoc_logo.png"
                 alt=""
                 class="wp-image-4390"
                 width="120"
@@ -443,7 +443,7 @@
     </style>
     <script
       type="text/javascript"
-      src="assets/js/jquery-1.11.2.min.js"
+      src="{{ relative_root }}/assets/js/jquery-1.11.2.min.js"
       id="jquery-js"
     ></script>
     <script type="text/javascript" id="utthehill-utk-js-extra">
@@ -459,7 +459,7 @@
     </script>
     <script
       type="text/javascript"
-      src="assets/js/v2019.js"
+      src="{{ relative_root }}/assets/js/v2019.js"
       id="utthehill-utk-js"
     ></script>
 
