--- a/templates/layout.html
+++ b/templates/layout.html
@@ -248,21 +248,8 @@
                 <div class="wp-block-group__inner-container">
                   <h2 class="wp-block-heading">Initiatives</h2>
 
-                  <ul
-                  class="wp-block-latest-posts__list has-dates wp-block-latest-posts"
-                >
-                  <li>
-                    <a
-                      class="wp-block-latest-posts__post-title"
-                      href="{{ relative_root }}/Initiatives.htm"
-                      > Summer 2024 Internship Program </a
-                    >
-                    <time
-                      datetime="2024-02-26T15:57:28+00:00"
-                      class="wp-block-latest-posts__post-date"
-                      >April 12, 2024</time>
-                  </li>
-
+                  <ul class="wp-block-latest-posts__list has-dates wp-block-latest-posts">
+                    <!-- SIDEBAR_INITIATIVES -->
                   </ul>
                   
                 </div>
